# clifig

./: .gitignore  functions.py  logger.py  main.py  params.py  pyproject.toml  test.ipynb
src/fig/: functions.py  init_matplotlib.py  logger.py  main.py  params.py
