[project]
name = "fig"
version = "0.1.0"
description = "Matplotlib style CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "matplotlib>=3.8.0",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
]

[project.scripts]
fig = "fig.main:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
